# vault-kms-provider

./: .gitignore  CNAME  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  dev-tls-config.hcl  docker-compose.etcd.yml  docker-compose.yml  increment-version.js  index.html  index.yaml  justfile  renovate.json  sitemap.xml
.circleci/: config.yml
.github/: pr-title-checker-config.json
.github/workflows/: pr-title-checker.yml
alerts/kubernetes_fix_required/: index.html
badges/: index.html
benches/: app_benchmark.rs  decryption.rs  encryption.rs  health.rs  main.rs
benchmarks/: index.html  index.njk  report.html
benchmarks/decryption/: index.html  index.njk
benchmarks/encryption/: index.html  index.njk
benchmarks/health/: index.html  index.njk
benchmarks/report/: index.html
charts/vault-kms-provider/: Chart.yaml
charts/vault-kms-provider/templates/: deployment.yaml
configuration/: index.html
configuration/authentication/: index.html
configuration/kubernetes/: index.html
configuration/plugin/: index.html
configuration/provider/: index.html
configuration/tls/: index.html
configuration/vault/: index.html
css/: about.css  about.css.map  content.css  content.css.map  github-link.css  github-link.css.map  index.css  index.css.map  sidebar.css  sidebar.css.map
docs/: .eleventy.mjs  index.md  package.json  pnpm-lock.yaml
documentation/: .eleventy.js  package.json  pnpm-lock.yaml
documentation/src/: badges.md  index.liquid  index.md  quick-start.liquid  robots.txt  sitemap.njk
documentation/src/_data/: site.js
documentation/src/_includes/: about.liquid  base.liquid  home.liquid  layout.liquid  nav.njk
documentation/src/alerts/: alerts.json  badges.md  kubernetes_fix_required.md
documentation/src/benchmarks/: benchmarks.json  index.liquid  index.njk  report.html
documentation/src/configuration/: authentication.md  configuration.json  index.md  kubernetes.md  plugin.md  provider.md  tls.md  vault.md
documentation/src/installation/: docker.md  helm.md  index.liquid  index.md  installation.json  source.md  static.md
documentation/src/styles/: about.scss  content.scss  github-link.scss  index.scss  sidebar.scss
helm/: .helmignore  Chart.yaml  values.yaml
helm/templates/: cluster-role-binding.yaml  config-map.yaml  deployment.yaml  encryption-configuration.yaml  service-account.yaml  socket-volume.yaml
helm/templates/configurations/: config-map.yaml  encryption-configuration.yaml
helm/templates/roles/: role-binding.yaml  role.yaml
helm/templates/secrets/: authToken.yaml  vault-token.yaml
helm_test_files/: docker-compose.etcd.yml  generate-custom-ca-certs.sh
helm_test_files/certs/: server-ca.crt  server-ca.key  server-client.crt  server-client.key  server.crt
installation/: index.html
installation/docker/: index.html
installation/helm/: index.html
installation/repository/: index.html
installation/source/: index.html
installation/static/: index.html
policies/: transit.hcl
proto/: api.proto
quick-start/: index.html
src/: api_grpc.rs  client.rs  configuration.rs  kms.rs  lib.rs  main.rs  server.rs
src/checks/: health.rs  mod.rs  readiness.rs
src/configuration/: authentication.rs  health.rs  logging.rs  mod.rs  socket.rs  tls.rs  vault.rs
src/kubernetes/: mod.rs
src/utilities/: date.rs  env.rs  environment.rs  logging.rs  mod.rs  socket.rs  source.rs  token.rs  watcher.rs
src/vault/: api.rs  client.rs  data.rs  decryption.rs  encryption.rs  keys.rs  kms.rs  mod.rs  server.rs  service.rs  transit.rs
test_files/: Dockerfile  docker-compose.etcd.yml  values.yaml  vault-kms-provider.yaml
test_files/certs/: ca.crt  tls.crt  tls.key
test_files/jwt/: private_key.pem  public_key.pem  token
test_files/vault/: values.yaml
tests/: authentication.rs  common.rs  encryption.rs  kms.rs  kms_provider.rs  server.rs
tmp/: main.rs
version/: checkFileName.js  checkPrTitle.js  increment.js
(+21 files in other folders)
