[package]
name = "vault_kms_provider"
version = "1.2.100"
edition = "2021"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
convert_case = "0.10.0"
futures = "0.3.31"
http = "1.3.1"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.17", features = ["tokio"] }
hyper = { version = "1.7.0", features = ["http1", "server"] }
notify = "8.2.0"
prost = "0.14.1"
reqwest = { version = "0.12.23", features = ["rustls-tls"], default-features = false }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.2"
tonic-prost = "0.14.2"
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json", "ansi", "env-filter"] }
vaultrs = "0.7.4"
log = "0.4.28"
chrono = "0.4.42"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports", "async_tokio", "async"] }
pretty_assertions = "1.4.1"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }

[[bench]]
name = "main"
harness = false
bench = true

[build-dependencies]
tonic-prost-build = "0.14.2"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
