[package]
name = "vault_kms_provider"
version = "1.2.134"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bench]]
bench = true
harness = false
name = "main"

[dependencies]
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.43"
convert_case = "0.11.0"
futures = "0.3.31"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
log = "0.4.29"
notify = "8.2.0"
prost = "0.14.3"
reqwest = { version = "0.13.1", default-features = false, features = ["rustls"] }
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.14.3"
tonic-prost = "0.14.3"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "ansi",
  "env-filter",
  "json"
] }
vaultrs = "0.7.4"

[dev-dependencies]
criterion = { version = "0.8.1", features = [
  "async",
  "async_tokio",
  "html_reports"
] }
pretty_assertions = "1.4.1"
uuid = { version = "1.20.0", features = ["fast-rng", "v4"] }

[build-dependencies]
tonic-prost-build = "0.14.3"
